name: ghcjs-dom-webkit
version: 0.3.1.0
cabal-version: >=1.22
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: DOM library that supports both GHCJS and WebKitGTK
description: Documentent Object Model (DOM) functions that work with
             GHCJS, but can also be used with GHC and WebKitGTK.
author: Hamish Mackenzie
data-dir: ""
category: Web

Source-Repository head
  type:         git
  location:     https://github.com/ghcjs/ghcjs-dom
  subdir:       ghcjs-dom-webkit

flag old-webkit
    description: If you have an old version of WebKitGTK+ this will get ghcjs-dom
                 to build, leaving out functions that are new or have changed.
                 This option is mainly here to get the travis builds to work.
    default: False

flag gtk3
    description: Use GTK3 rather than GTK2 (only matters when using webkit)
    default: True

library
    build-depends: base <5,
                   transformers >=0.3.0.0 && <0.6,
                   text >= 0.11.0.6 && < 1.3,
                   glib >=0.13.0.0 && <0.14

    default-language: Haskell2010

    hs-source-dirs: src
    cpp-options: -DUSE_WEBKIT
    if flag(gtk3)
        build-depends: gtk3 >=0.13.0.0 && <0.15, webkitgtk3 >=0.14.0.0 && <0.15
    else
        build-depends: gtk >=0.13.0.0 && <0.14, webkit >=0.14.0.0 && <0.15
    c-sources:      cbits/ghcjs_stubs.c

    if flag(old-webkit)
        cpp-options: -DUSE_OLD_WEBKIT

    exposed: True
    buildable: True

    exposed-modules:
          GHCJS.DOM
          GHCJS.DOM.Types
          GHCJS.DOM.EventM
          GHCJS.DOM.EventTargetClosures

          -- Generated by domconv-webkit-jsffi
          GHCJS.DOM.ANGLEInstancedArrays
          GHCJS.DOM.AbstractView
          GHCJS.DOM.AbstractWorker
          GHCJS.DOM.AllAudioCapabilities
          GHCJS.DOM.AllVideoCapabilities
          GHCJS.DOM.AnalyserNode
          GHCJS.DOM.AnimationEvent
          GHCJS.DOM.AudioBuffer
          GHCJS.DOM.AudioBufferCallback
          GHCJS.DOM.AudioBufferSourceNode
          GHCJS.DOM.AudioContext
          GHCJS.DOM.AudioDestinationNode
          GHCJS.DOM.AudioListener
          GHCJS.DOM.AudioNode
          GHCJS.DOM.AudioParam
          GHCJS.DOM.AudioProcessingEvent
          GHCJS.DOM.AudioStreamTrack
          GHCJS.DOM.AutocompleteErrorEvent
          GHCJS.DOM.BeforeLoadEvent
          GHCJS.DOM.BeforeUnloadEvent
          GHCJS.DOM.BiquadFilterNode
          GHCJS.DOM.CSSCharsetRule
          GHCJS.DOM.CSSFontFaceLoadEvent
          GHCJS.DOM.CSSFontFaceRule
          GHCJS.DOM.CSSImportRule
          GHCJS.DOM.CSSKeyframeRule
          GHCJS.DOM.CSSKeyframesRule
          GHCJS.DOM.CSSMediaRule
          GHCJS.DOM.CSSPageRule
          GHCJS.DOM.CSSPrimitiveValue
          GHCJS.DOM.CSSStyleRule
          GHCJS.DOM.CSSSupportsRule
          GHCJS.DOM.CSSValueList
          GHCJS.DOM.CanvasGradient
          GHCJS.DOM.CanvasRenderingContext
          GHCJS.DOM.CanvasRenderingContext2D
          GHCJS.DOM.CapabilityRange
          GHCJS.DOM.ChildNode
          GHCJS.DOM.ClientRect
          GHCJS.DOM.ClientRectList
          GHCJS.DOM.CloseEvent
          GHCJS.DOM.CommandLineAPIHost
          GHCJS.DOM.Comment
          GHCJS.DOM.CompositionEvent
          GHCJS.DOM.ConvolverNode
          GHCJS.DOM.Coordinates
          GHCJS.DOM.Counter
          GHCJS.DOM.Crypto
          GHCJS.DOM.CryptoKey
          GHCJS.DOM.CryptoKeyPair
          GHCJS.DOM.CustomEvent
          GHCJS.DOM.DOMError
          GHCJS.DOM.DOMParser
          GHCJS.DOM.DataCue
          GHCJS.DOM.DataTransfer
          GHCJS.DOM.DataTransferItem
          GHCJS.DOM.DataTransferItemList
          GHCJS.DOM.Database
          GHCJS.DOM.DatabaseCallback
          GHCJS.DOM.DedicatedWorkerGlobalScope
          GHCJS.DOM.DelayNode
          GHCJS.DOM.DeviceMotionEvent
          GHCJS.DOM.DeviceOrientationEvent
          GHCJS.DOM.DeviceProximityEvent
          GHCJS.DOM.DocumentFragment
          GHCJS.DOM.DynamicsCompressorNode
          GHCJS.DOM.EXTBlendMinMax
          GHCJS.DOM.EXTTextureFilterAnisotropic
          GHCJS.DOM.EXTsRGB
          GHCJS.DOM.Entity
          GHCJS.DOM.ErrorEvent
          GHCJS.DOM.EventListener
          GHCJS.DOM.EventSource
          GHCJS.DOM.FileError
          GHCJS.DOM.FileReader
          GHCJS.DOM.FileReaderSync
          GHCJS.DOM.FocusEvent
          GHCJS.DOM.FontLoader
          GHCJS.DOM.FormData
          GHCJS.DOM.GainNode
          GHCJS.DOM.Gamepad
          GHCJS.DOM.GamepadButton
          GHCJS.DOM.GamepadEvent
          GHCJS.DOM.Geoposition
          GHCJS.DOM.HTMLAllCollection
          GHCJS.DOM.HTMLDataListElement
          GHCJS.DOM.HTMLFormControlsCollection
          GHCJS.DOM.HTMLMeterElement
          GHCJS.DOM.HTMLOutputElement
          GHCJS.DOM.HTMLProgressElement
          GHCJS.DOM.HTMLSourceElement
          GHCJS.DOM.HTMLTemplateElement
          GHCJS.DOM.HTMLTrackElement
          GHCJS.DOM.HashChangeEvent
          GHCJS.DOM.IDBCursor
          GHCJS.DOM.IDBCursorWithValue
          GHCJS.DOM.IDBDatabase
          GHCJS.DOM.IDBFactory
          GHCJS.DOM.IDBIndex
          GHCJS.DOM.IDBKeyRange
          GHCJS.DOM.IDBObjectStore
          GHCJS.DOM.IDBOpenDBRequest
          GHCJS.DOM.IDBRequest
          GHCJS.DOM.IDBTransaction
          GHCJS.DOM.IDBVersionChangeEvent
          GHCJS.DOM.ImageData
          GHCJS.DOM.InspectorFrontendHost
          GHCJS.DOM.InternalSettings
          GHCJS.DOM.Internals
          GHCJS.DOM.MallocStatistics
          GHCJS.DOM.MediaController
          GHCJS.DOM.MediaControlsHost
          GHCJS.DOM.MediaElementAudioSourceNode
          GHCJS.DOM.MediaKeyError
          GHCJS.DOM.MediaKeyEvent
          GHCJS.DOM.MediaKeyMessageEvent
          GHCJS.DOM.MediaKeyNeededEvent
          GHCJS.DOM.MediaKeySession
          GHCJS.DOM.MediaKeys
          GHCJS.DOM.MediaQueryListListener
          GHCJS.DOM.MediaSource
          GHCJS.DOM.MediaSourceStates
          GHCJS.DOM.MediaStream
          GHCJS.DOM.MediaStreamAudioDestinationNode
          GHCJS.DOM.MediaStreamAudioSourceNode
          GHCJS.DOM.MediaStreamEvent
          GHCJS.DOM.MediaStreamTrack
          GHCJS.DOM.MediaStreamTrackEvent
          GHCJS.DOM.MediaStreamTrackSourcesCallback
          GHCJS.DOM.MediaTrackConstraints
          GHCJS.DOM.MemoryInfo
          GHCJS.DOM.MessageChannel
          GHCJS.DOM.MessageEvent
          GHCJS.DOM.MessagePort
          GHCJS.DOM.MutationEvent
          GHCJS.DOM.MutationObserver
          GHCJS.DOM.MutationRecord
          GHCJS.DOM.NavigatorUserMediaError
          GHCJS.DOM.NavigatorUserMediaErrorCallback
          GHCJS.DOM.NavigatorUserMediaSuccessCallback
          GHCJS.DOM.Notification
          GHCJS.DOM.NotificationCenter
          GHCJS.DOM.NotificationPermissionCallback
          GHCJS.DOM.OESStandardDerivatives
          GHCJS.DOM.OESTextureHalfFloat
          GHCJS.DOM.OESVertexArrayObject
          GHCJS.DOM.OfflineAudioCompletionEvent
          GHCJS.DOM.OfflineAudioContext
          GHCJS.DOM.OscillatorNode
          GHCJS.DOM.OverflowEvent
          GHCJS.DOM.PageTransitionEvent
          GHCJS.DOM.PannerNode
          GHCJS.DOM.Path2D
          GHCJS.DOM.PerformanceEntry
          GHCJS.DOM.PerformanceEntryList
          GHCJS.DOM.PerformanceResourceTiming
          GHCJS.DOM.PopStateEvent
          GHCJS.DOM.PositionCallback
          GHCJS.DOM.PositionError
          GHCJS.DOM.PositionErrorCallback
          GHCJS.DOM.ProgressEvent
          GHCJS.DOM.QuickTimePluginReplacement
          GHCJS.DOM.RGBColor
          GHCJS.DOM.RTCConfiguration
          GHCJS.DOM.RTCDTMFSender
          GHCJS.DOM.RTCDTMFToneChangeEvent
          GHCJS.DOM.RTCDataChannel
          GHCJS.DOM.RTCDataChannelEvent
          GHCJS.DOM.RTCIceCandidate
          GHCJS.DOM.RTCIceCandidateEvent
          GHCJS.DOM.RTCIceServer
          GHCJS.DOM.RTCPeerConnection
          GHCJS.DOM.RTCPeerConnectionErrorCallback
          GHCJS.DOM.RTCSessionDescription
          GHCJS.DOM.RTCSessionDescriptionCallback
          GHCJS.DOM.RTCStatsCallback
          GHCJS.DOM.RTCStatsReport
          GHCJS.DOM.RTCStatsResponse
          GHCJS.DOM.RadioNodeList
          GHCJS.DOM.ReadableStream
          GHCJS.DOM.Rect
          GHCJS.DOM.RequestAnimationFrameCallback
          GHCJS.DOM.SQLError
          GHCJS.DOM.SQLResultSet
          GHCJS.DOM.SQLResultSetRowList
          GHCJS.DOM.SQLStatementCallback
          GHCJS.DOM.SQLStatementErrorCallback
          GHCJS.DOM.SQLTransaction
          GHCJS.DOM.SQLTransactionCallback
          GHCJS.DOM.SQLTransactionErrorCallback
          GHCJS.DOM.SVGAElement
          GHCJS.DOM.SVGAltGlyphElement
          GHCJS.DOM.SVGAngle
          GHCJS.DOM.SVGAnimatedAngle
          GHCJS.DOM.SVGAnimatedBoolean
          GHCJS.DOM.SVGAnimatedEnumeration
          GHCJS.DOM.SVGAnimatedInteger
          GHCJS.DOM.SVGAnimatedLength
          GHCJS.DOM.SVGAnimatedLengthList
          GHCJS.DOM.SVGAnimatedNumber
          GHCJS.DOM.SVGAnimatedNumberList
          GHCJS.DOM.SVGAnimatedPreserveAspectRatio
          GHCJS.DOM.SVGAnimatedRect
          GHCJS.DOM.SVGAnimatedString
          GHCJS.DOM.SVGAnimatedTransformList
          GHCJS.DOM.SVGAnimationElement
          GHCJS.DOM.SVGCircleElement
          GHCJS.DOM.SVGClipPathElement
          GHCJS.DOM.SVGColor
          GHCJS.DOM.SVGComponentTransferFunctionElement
          GHCJS.DOM.SVGCursorElement
          GHCJS.DOM.SVGDocument
          GHCJS.DOM.SVGElement
          GHCJS.DOM.SVGEllipseElement
          GHCJS.DOM.SVGExternalResourcesRequired
          GHCJS.DOM.SVGFEBlendElement
          GHCJS.DOM.SVGFEColorMatrixElement
          GHCJS.DOM.SVGFEComponentTransferElement
          GHCJS.DOM.SVGFECompositeElement
          GHCJS.DOM.SVGFEConvolveMatrixElement
          GHCJS.DOM.SVGFEDiffuseLightingElement
          GHCJS.DOM.SVGFEDisplacementMapElement
          GHCJS.DOM.SVGFEDistantLightElement
          GHCJS.DOM.SVGFEDropShadowElement
          GHCJS.DOM.SVGFEGaussianBlurElement
          GHCJS.DOM.SVGFEImageElement
          GHCJS.DOM.SVGFEMergeNodeElement
          GHCJS.DOM.SVGFEMorphologyElement
          GHCJS.DOM.SVGFEOffsetElement
          GHCJS.DOM.SVGFEPointLightElement
          GHCJS.DOM.SVGFESpecularLightingElement
          GHCJS.DOM.SVGFESpotLightElement
          GHCJS.DOM.SVGFETileElement
          GHCJS.DOM.SVGFETurbulenceElement
          GHCJS.DOM.SVGFilterElement
          GHCJS.DOM.SVGFilterPrimitiveStandardAttributes
          GHCJS.DOM.SVGFitToViewBox
          GHCJS.DOM.SVGForeignObjectElement
          GHCJS.DOM.SVGGlyphRefElement
          GHCJS.DOM.SVGGradientElement
          GHCJS.DOM.SVGGraphicsElement
          GHCJS.DOM.SVGImageElement
          GHCJS.DOM.SVGLength
          GHCJS.DOM.SVGLengthList
          GHCJS.DOM.SVGLineElement
          GHCJS.DOM.SVGLinearGradientElement
          GHCJS.DOM.SVGMarkerElement
          GHCJS.DOM.SVGMaskElement
          GHCJS.DOM.SVGMatrix
          GHCJS.DOM.SVGNumber
          GHCJS.DOM.SVGNumberList
          GHCJS.DOM.SVGPaint
          GHCJS.DOM.SVGPathElement
          GHCJS.DOM.SVGPathSeg
          GHCJS.DOM.SVGPathSegArcAbs
          GHCJS.DOM.SVGPathSegArcRel
          GHCJS.DOM.SVGPathSegCurvetoCubicAbs
          GHCJS.DOM.SVGPathSegCurvetoCubicRel
          GHCJS.DOM.SVGPathSegCurvetoCubicSmoothAbs
          GHCJS.DOM.SVGPathSegCurvetoCubicSmoothRel
          GHCJS.DOM.SVGPathSegCurvetoQuadraticAbs
          GHCJS.DOM.SVGPathSegCurvetoQuadraticRel
          GHCJS.DOM.SVGPathSegCurvetoQuadraticSmoothAbs
          GHCJS.DOM.SVGPathSegCurvetoQuadraticSmoothRel
          GHCJS.DOM.SVGPathSegLinetoAbs
          GHCJS.DOM.SVGPathSegLinetoHorizontalAbs
          GHCJS.DOM.SVGPathSegLinetoHorizontalRel
          GHCJS.DOM.SVGPathSegLinetoRel
          GHCJS.DOM.SVGPathSegLinetoVerticalAbs
          GHCJS.DOM.SVGPathSegLinetoVerticalRel
          GHCJS.DOM.SVGPathSegList
          GHCJS.DOM.SVGPathSegMovetoAbs
          GHCJS.DOM.SVGPathSegMovetoRel
          GHCJS.DOM.SVGPatternElement
          GHCJS.DOM.SVGPoint
          GHCJS.DOM.SVGPointList
          GHCJS.DOM.SVGPolygonElement
          GHCJS.DOM.SVGPolylineElement
          GHCJS.DOM.SVGPreserveAspectRatio
          GHCJS.DOM.SVGRadialGradientElement
          GHCJS.DOM.SVGRect
          GHCJS.DOM.SVGRectElement
          GHCJS.DOM.SVGRenderingIntent
          GHCJS.DOM.SVGSVGElement
          GHCJS.DOM.SVGScriptElement
          GHCJS.DOM.SVGStopElement
          GHCJS.DOM.SVGStringList
          GHCJS.DOM.SVGStyleElement
          GHCJS.DOM.SVGTests
          GHCJS.DOM.SVGTextContentElement
          GHCJS.DOM.SVGTextPathElement
          GHCJS.DOM.SVGTextPositioningElement
          GHCJS.DOM.SVGTransform
          GHCJS.DOM.SVGTransformList
          GHCJS.DOM.SVGURIReference
          GHCJS.DOM.SVGUnitTypes
          GHCJS.DOM.SVGUseElement
          GHCJS.DOM.SVGViewElement
          GHCJS.DOM.SVGViewSpec
          GHCJS.DOM.SVGZoomAndPan
          GHCJS.DOM.SVGZoomEvent
          GHCJS.DOM.ScriptProcessorNode
          GHCJS.DOM.ScriptProfile
          GHCJS.DOM.ScriptProfileNode
          GHCJS.DOM.SecurityPolicyViolationEvent
          GHCJS.DOM.SourceBuffer
          GHCJS.DOM.SourceBufferList
          GHCJS.DOM.SourceInfo
          GHCJS.DOM.SpeechSynthesis
          GHCJS.DOM.SpeechSynthesisEvent
          GHCJS.DOM.SpeechSynthesisUtterance
          GHCJS.DOM.SpeechSynthesisVoice
          GHCJS.DOM.StorageErrorCallback
          GHCJS.DOM.StorageEvent
          GHCJS.DOM.StorageQuota
          GHCJS.DOM.StorageQuotaCallback
          GHCJS.DOM.StorageUsageCallback
          GHCJS.DOM.StringCallback
          GHCJS.DOM.SubtleCrypto
          GHCJS.DOM.TextEvent
          GHCJS.DOM.TextMetrics
          GHCJS.DOM.TouchEvent
          GHCJS.DOM.TouchList
          GHCJS.DOM.TrackEvent
          GHCJS.DOM.TransitionEvent
          GHCJS.DOM.TypeConversions
          GHCJS.DOM.UIRequestEvent
          GHCJS.DOM.URL
          GHCJS.DOM.URLUtils
          GHCJS.DOM.UserMessageHandler
          GHCJS.DOM.VTTCue
          GHCJS.DOM.VTTRegion
          GHCJS.DOM.VTTRegionList
          GHCJS.DOM.VideoPlaybackQuality
          GHCJS.DOM.VideoStreamTrack
          GHCJS.DOM.VoidCallback
          GHCJS.DOM.WaveShaperNode
          GHCJS.DOM.WebGL2RenderingContext
          GHCJS.DOM.WebGLActiveInfo
          GHCJS.DOM.WebGLCompressedTextureATC
          GHCJS.DOM.WebGLCompressedTexturePVRTC
          GHCJS.DOM.WebGLCompressedTextureS3TC
          GHCJS.DOM.WebGLContextAttributes
          GHCJS.DOM.WebGLContextEvent
          GHCJS.DOM.WebGLDebugRendererInfo
          GHCJS.DOM.WebGLDebugShaders
          GHCJS.DOM.WebGLDepthTexture
          GHCJS.DOM.WebGLDrawBuffers
          GHCJS.DOM.WebGLLoseContext
          GHCJS.DOM.WebGLRenderingContextBase
          GHCJS.DOM.WebGLShaderPrecisionFormat
          GHCJS.DOM.WebKitAnimationEvent
          GHCJS.DOM.WebKitCSSFilterValue
          GHCJS.DOM.WebKitCSSMatrix
          GHCJS.DOM.WebKitCSSRegionRule
          GHCJS.DOM.WebKitCSSTransformValue
          GHCJS.DOM.WebKitCSSViewportRule
          GHCJS.DOM.WebKitNamespace
          GHCJS.DOM.WebKitPlaybackTargetAvailabilityEvent
          GHCJS.DOM.WebKitTransitionEvent
          GHCJS.DOM.WebSocket
          GHCJS.DOM.WindowBase64
          GHCJS.DOM.WindowTimers
          GHCJS.DOM.Worker
          GHCJS.DOM.WorkerGlobalScope
          GHCJS.DOM.WorkerLocation
          GHCJS.DOM.WorkerNavigator
          GHCJS.DOM.XMLHttpRequest
          GHCJS.DOM.XMLHttpRequestProgressEvent
          GHCJS.DOM.XMLHttpRequestUpload
          GHCJS.DOM.XMLSerializer
          GHCJS.DOM.XPathEvaluator
          GHCJS.DOM.XSLTProcessor

    reexported-modules:
          -- Generated by domconv-webkit-jsffi
            Graphics.UI.Gtk.WebKit.DOM.ApplicationCache as GHCJS.DOM.ApplicationCache
          , Graphics.UI.Gtk.WebKit.DOM.Attr as GHCJS.DOM.Attr
          , Graphics.UI.Gtk.WebKit.DOM.AudioTrack as GHCJS.DOM.AudioTrack
          , Graphics.UI.Gtk.WebKit.DOM.AudioTrackList as GHCJS.DOM.AudioTrackList
          , Graphics.UI.Gtk.WebKit.DOM.BarProp as GHCJS.DOM.BarProp
          , Graphics.UI.Gtk.WebKit.DOM.BatteryManager as GHCJS.DOM.BatteryManager
          , Graphics.UI.Gtk.WebKit.DOM.Blob as GHCJS.DOM.Blob
          , Graphics.UI.Gtk.WebKit.DOM.CSS as GHCJS.DOM.CSS
          , Graphics.UI.Gtk.WebKit.DOM.CSSRule as GHCJS.DOM.CSSRule
          , Graphics.UI.Gtk.WebKit.DOM.CSSRuleList as GHCJS.DOM.CSSRuleList
          , Graphics.UI.Gtk.WebKit.DOM.CSSStyleDeclaration as GHCJS.DOM.CSSStyleDeclaration
          , Graphics.UI.Gtk.WebKit.DOM.CSSStyleSheet as GHCJS.DOM.CSSStyleSheet
          , Graphics.UI.Gtk.WebKit.DOM.CSSValue as GHCJS.DOM.CSSValue
          , Graphics.UI.Gtk.WebKit.DOM.CharacterData as GHCJS.DOM.CharacterData
          , Graphics.UI.Gtk.WebKit.DOM.DOMImplementation as GHCJS.DOM.DOMImplementation
          , Graphics.UI.Gtk.WebKit.DOM.DOMNamedFlowCollection as GHCJS.DOM.DOMNamedFlowCollection
          , Graphics.UI.Gtk.WebKit.DOM.DOMSettableTokenList as GHCJS.DOM.DOMSettableTokenList
          , Graphics.UI.Gtk.WebKit.DOM.DOMStringList as GHCJS.DOM.DOMStringList
          , Graphics.UI.Gtk.WebKit.DOM.DOMTokenList as GHCJS.DOM.DOMTokenList
          , Graphics.UI.Gtk.WebKit.DOM.Document as GHCJS.DOM.Document
          , Graphics.UI.Gtk.WebKit.DOM.DocumentType as GHCJS.DOM.DocumentType
          , Graphics.UI.Gtk.WebKit.DOM.Element as GHCJS.DOM.Element
          , Graphics.UI.Gtk.WebKit.DOM.Enums as GHCJS.DOM.Enums
          , Graphics.UI.Gtk.WebKit.DOM.Event as GHCJS.DOM.Event
          , Graphics.UI.Gtk.WebKit.DOM.EventTarget as GHCJS.DOM.EventTarget
          , Graphics.UI.Gtk.WebKit.DOM.File as GHCJS.DOM.File
          , Graphics.UI.Gtk.WebKit.DOM.FileList as GHCJS.DOM.FileList
          , Graphics.UI.Gtk.WebKit.DOM.Geolocation as GHCJS.DOM.Geolocation
          , Graphics.UI.Gtk.WebKit.DOM.HTMLAnchorElement as GHCJS.DOM.HTMLAnchorElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLAppletElement as GHCJS.DOM.HTMLAppletElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLAreaElement as GHCJS.DOM.HTMLAreaElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLBRElement as GHCJS.DOM.HTMLBRElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLBaseElement as GHCJS.DOM.HTMLBaseElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLBaseFontElement as GHCJS.DOM.HTMLBaseFontElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLBodyElement as GHCJS.DOM.HTMLBodyElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLButtonElement as GHCJS.DOM.HTMLButtonElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLCanvasElement as GHCJS.DOM.HTMLCanvasElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLCollection as GHCJS.DOM.HTMLCollection
          , Graphics.UI.Gtk.WebKit.DOM.HTMLDListElement as GHCJS.DOM.HTMLDListElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLDetailsElement as GHCJS.DOM.HTMLDetailsElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLDirectoryElement as GHCJS.DOM.HTMLDirectoryElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLDivElement as GHCJS.DOM.HTMLDivElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLDocument as GHCJS.DOM.HTMLDocument
          , Graphics.UI.Gtk.WebKit.DOM.HTMLElement as GHCJS.DOM.HTMLElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLEmbedElement as GHCJS.DOM.HTMLEmbedElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLFieldSetElement as GHCJS.DOM.HTMLFieldSetElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLFontElement as GHCJS.DOM.HTMLFontElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLFormElement as GHCJS.DOM.HTMLFormElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLFrameElement as GHCJS.DOM.HTMLFrameElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLFrameSetElement as GHCJS.DOM.HTMLFrameSetElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLHRElement as GHCJS.DOM.HTMLHRElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLHeadElement as GHCJS.DOM.HTMLHeadElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLHeadingElement as GHCJS.DOM.HTMLHeadingElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLHtmlElement as GHCJS.DOM.HTMLHtmlElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLIFrameElement as GHCJS.DOM.HTMLIFrameElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLImageElement as GHCJS.DOM.HTMLImageElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLInputElement as GHCJS.DOM.HTMLInputElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLKeygenElement as GHCJS.DOM.HTMLKeygenElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLLIElement as GHCJS.DOM.HTMLLIElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLLabelElement as GHCJS.DOM.HTMLLabelElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLLegendElement as GHCJS.DOM.HTMLLegendElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLLinkElement as GHCJS.DOM.HTMLLinkElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLMapElement as GHCJS.DOM.HTMLMapElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLMarqueeElement as GHCJS.DOM.HTMLMarqueeElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLMediaElement as GHCJS.DOM.HTMLMediaElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLMenuElement as GHCJS.DOM.HTMLMenuElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLMetaElement as GHCJS.DOM.HTMLMetaElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLModElement as GHCJS.DOM.HTMLModElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLOListElement as GHCJS.DOM.HTMLOListElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLObjectElement as GHCJS.DOM.HTMLObjectElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLOptGroupElement as GHCJS.DOM.HTMLOptGroupElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLOptionElement as GHCJS.DOM.HTMLOptionElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLOptionsCollection as GHCJS.DOM.HTMLOptionsCollection
          , Graphics.UI.Gtk.WebKit.DOM.HTMLParagraphElement as GHCJS.DOM.HTMLParagraphElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLParamElement as GHCJS.DOM.HTMLParamElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLPreElement as GHCJS.DOM.HTMLPreElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLQuoteElement as GHCJS.DOM.HTMLQuoteElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLScriptElement as GHCJS.DOM.HTMLScriptElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLSelectElement as GHCJS.DOM.HTMLSelectElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLStyleElement as GHCJS.DOM.HTMLStyleElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLTableCaptionElement as GHCJS.DOM.HTMLTableCaptionElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLTableCellElement as GHCJS.DOM.HTMLTableCellElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLTableColElement as GHCJS.DOM.HTMLTableColElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLTableElement as GHCJS.DOM.HTMLTableElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLTableRowElement as GHCJS.DOM.HTMLTableRowElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLTableSectionElement as GHCJS.DOM.HTMLTableSectionElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLTextAreaElement as GHCJS.DOM.HTMLTextAreaElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLTitleElement as GHCJS.DOM.HTMLTitleElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLUListElement as GHCJS.DOM.HTMLUListElement
          , Graphics.UI.Gtk.WebKit.DOM.HTMLVideoElement as GHCJS.DOM.HTMLVideoElement
          , Graphics.UI.Gtk.WebKit.DOM.History as GHCJS.DOM.History
          , Graphics.UI.Gtk.WebKit.DOM.KeyboardEvent as GHCJS.DOM.KeyboardEvent
          , Graphics.UI.Gtk.WebKit.DOM.Location as GHCJS.DOM.Location
          , Graphics.UI.Gtk.WebKit.DOM.MediaError as GHCJS.DOM.MediaError
          , Graphics.UI.Gtk.WebKit.DOM.MediaList as GHCJS.DOM.MediaList
          , Graphics.UI.Gtk.WebKit.DOM.MediaQueryList as GHCJS.DOM.MediaQueryList
          , Graphics.UI.Gtk.WebKit.DOM.MimeType as GHCJS.DOM.MimeType
          , Graphics.UI.Gtk.WebKit.DOM.MimeTypeArray as GHCJS.DOM.MimeTypeArray
          , Graphics.UI.Gtk.WebKit.DOM.MouseEvent as GHCJS.DOM.MouseEvent
          , Graphics.UI.Gtk.WebKit.DOM.NamedNodeMap as GHCJS.DOM.NamedNodeMap
          , Graphics.UI.Gtk.WebKit.DOM.Navigator as GHCJS.DOM.Navigator
          , Graphics.UI.Gtk.WebKit.DOM.Node as GHCJS.DOM.Node
          , Graphics.UI.Gtk.WebKit.DOM.NodeFilter as GHCJS.DOM.NodeFilter
          , Graphics.UI.Gtk.WebKit.DOM.NodeIterator as GHCJS.DOM.NodeIterator
          , Graphics.UI.Gtk.WebKit.DOM.NodeList as GHCJS.DOM.NodeList
          , Graphics.UI.Gtk.WebKit.DOM.Performance as GHCJS.DOM.Performance
          , Graphics.UI.Gtk.WebKit.DOM.PerformanceNavigation as GHCJS.DOM.PerformanceNavigation
          , Graphics.UI.Gtk.WebKit.DOM.PerformanceTiming as GHCJS.DOM.PerformanceTiming
          , Graphics.UI.Gtk.WebKit.DOM.Plugin as GHCJS.DOM.Plugin
          , Graphics.UI.Gtk.WebKit.DOM.PluginArray as GHCJS.DOM.PluginArray
          , Graphics.UI.Gtk.WebKit.DOM.ProcessingInstruction as GHCJS.DOM.ProcessingInstruction
          , Graphics.UI.Gtk.WebKit.DOM.Range as GHCJS.DOM.Range
          , Graphics.UI.Gtk.WebKit.DOM.Screen as GHCJS.DOM.Screen
          , Graphics.UI.Gtk.WebKit.DOM.SecurityPolicy as GHCJS.DOM.SecurityPolicy
          , Graphics.UI.Gtk.WebKit.DOM.Selection as GHCJS.DOM.Selection
          , Graphics.UI.Gtk.WebKit.DOM.Storage as GHCJS.DOM.Storage
          , Graphics.UI.Gtk.WebKit.DOM.StorageInfo as GHCJS.DOM.StorageInfo
          , Graphics.UI.Gtk.WebKit.DOM.StyleMedia as GHCJS.DOM.StyleMedia
          , Graphics.UI.Gtk.WebKit.DOM.StyleSheet as GHCJS.DOM.StyleSheet
          , Graphics.UI.Gtk.WebKit.DOM.StyleSheetList as GHCJS.DOM.StyleSheetList
          , Graphics.UI.Gtk.WebKit.DOM.Text as GHCJS.DOM.Text
          , Graphics.UI.Gtk.WebKit.DOM.TextTrack as GHCJS.DOM.TextTrack
          , Graphics.UI.Gtk.WebKit.DOM.TextTrackCue as GHCJS.DOM.TextTrackCue
          , Graphics.UI.Gtk.WebKit.DOM.TextTrackCueList as GHCJS.DOM.TextTrackCueList
          , Graphics.UI.Gtk.WebKit.DOM.TextTrackList as GHCJS.DOM.TextTrackList
          , Graphics.UI.Gtk.WebKit.DOM.TimeRanges as GHCJS.DOM.TimeRanges
          , Graphics.UI.Gtk.WebKit.DOM.Touch as GHCJS.DOM.Touch
          , Graphics.UI.Gtk.WebKit.DOM.TreeWalker as GHCJS.DOM.TreeWalker
          , Graphics.UI.Gtk.WebKit.DOM.UIEvent as GHCJS.DOM.UIEvent
          , Graphics.UI.Gtk.WebKit.DOM.ValidityState as GHCJS.DOM.ValidityState
          , Graphics.UI.Gtk.WebKit.DOM.VideoTrack as GHCJS.DOM.VideoTrack
          , Graphics.UI.Gtk.WebKit.DOM.VideoTrackList as GHCJS.DOM.VideoTrackList
          , Graphics.UI.Gtk.WebKit.DOM.WebKitNamedFlow as GHCJS.DOM.WebKitNamedFlow
          , Graphics.UI.Gtk.WebKit.DOM.WebKitPoint as GHCJS.DOM.WebKitPoint
          , Graphics.UI.Gtk.WebKit.DOM.WheelEvent as GHCJS.DOM.WheelEvent
          , Graphics.UI.Gtk.WebKit.DOM.Window as GHCJS.DOM.Window
          , Graphics.UI.Gtk.WebKit.DOM.XPathExpression as GHCJS.DOM.XPathExpression
          , Graphics.UI.Gtk.WebKit.DOM.XPathNSResolver as GHCJS.DOM.XPathNSResolver
          , Graphics.UI.Gtk.WebKit.DOM.XPathResult as GHCJS.DOM.XPathResult
    